--- a/web/index.css
+++ b/web/index.css
@@ -11,12 +11,6 @@ h1, p {
   color: #333;
 }
 
-#sample_container_id {
-  width: 100%;
-  height: 400px;
-  position: relative;
-  border: 1px solid #ccc;
-  background-color: #fff;
+polymer-mscc-chart {
+  width: 700px;
 }
-
-
